[package]
name = "kubus"
version = "0.1.0"
authors = ["Jesse Stolwijk <stolwijkjesse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
version = "0.15.3"
features = ["vulkan"]

[dependencies]
log = "0.4.11"
voxel-mapper = { git = "https://github.com/amethyst/voxel-mapper", branch = "master" }